<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/m_choose"
        android:textSize="16sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/gallery_textView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/ic_photo_album_black_24dp"
        android:drawablePadding="32dp"
        android:drawableTint="?attr/colorPrimary"
        android:gravity="start|center_vertical"
        android:text="@string/m_gallery"
        android:textSize="16sp"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/camera_textView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/ic_camera_alt_black_24dp"
        android:drawablePadding="32dp"
        android:drawableTint="?attr/colorPrimary"
        android:gravity="start|center_vertical"
        android:text="@string/m_camera"
        android:textSize="16sp"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/file_textView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/ic_attach_file_black_24dp"
        android:drawablePadding="32dp"
        android:gravity="start|center_vertical"
        android:text="@string/m_document"
        android:textSize="16sp"

        android:textStyle="bold" />


</LinearLayout>