<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:padding="@dimen/small_padding">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/small_margin"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="@dimen/small_margin"
        card_view:cardElevation="3dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/medium_padding"
            android:paddingTop="@dimen/medium_padding"
            android:paddingEnd="@dimen/medium_padding"
            android:paddingBottom="@dimen/medium_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:text="@string/m_choose"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/cancel_imageView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/m_close_dialog_txt"
                    android:src="@drawable/ic_am_close" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttons_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:baselineAligned="false"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:id="@+id/image_linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/gallary_imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_am_photo"
                        android:tint="?attr/colorPrimary"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/gallery_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        android:gravity="start|center_vertical"
                        android:text="@string/m_gallery"
                        android:textColor="#0F1C24"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/camera_linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/camera_imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_am_camera"
                        android:tint="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/camera_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        android:gravity="start|center_vertical"
                        android:text="@string/m_camera"
                        android:textColor="#0F1C24"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/file_linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/file_imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_am_attach_file"
                        android:tint="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/file_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        android:gravity="start|center_vertical"
                        android:text="@string/m_document"
                        android:textColor="#0F1C24"
                        android:visibility="visible" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>